--- a/main/recruiter-jobpost.html
+++ b/main/recruiter-jobpost.html
@@ -6,28 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/dashboard.css" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap"
-        rel="stylesheet" />
-
-    <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <!-- Libraries Stylesheet -->
-    <link href="/lib/animate/animate.min.css" rel="stylesheet" />
-    <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
-        integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <title>List a Job</title>
 </head>
 
@@ -41,19 +22,19 @@
                 </div>
                 <ul>
                     <li>
-                        <a href="job-list.html"><i class="fas fa-user"></i>
+                        <a href="/main/job-list.html"><i class="fas fa-user"></i>
                             <span class="nav-item">Dashboard</span></a>
                     </li>
                     <li>
-                        <a href="recruiter-register.html"><i class="fas fa-chart-bar"></i>
+                        <a href="/main/recruiter-register.html"><i class="fas fa-chart-bar"></i>
                             <span class="nav-item">Register</span></a>
                     </li>
                     <li>
-                        <a href="recruiter-jobpost.html"><i class="fas fa-chart-bar"></i>
+                        <a href="/main/recruiter-jobpost.html"><i class="fas fa-chart-bar"></i>
                             <span class="nav-item">List a Job</span></a>
                     </li>
                     <li>
-                        <a href="login.html" class="Logout"><i class="fas fa-sign-out-alt"></i>
+                        <a href="/main/login.html" class="Logout"><i class="fas fa-sign-out-alt"></i>
                             <span class="nav-item">Log Out</span></a>
                     </li>
                 </ul>
@@ -67,10 +48,10 @@
             <br />
             <h3 class="text-center">Enter the details for the Job</h3>
             <div class="updation">
-                <form method="POST" action="../php/postjob.php" class="p-4 border rounded bg-light">
+                <form method="POST" action="../php/postjob.php" class="p-4 border rounded bg-light" id="jobForm">
                     <div class="mb-3">
-                        <label for="title" class="form-label">Job Title:</label>
-                        <input type="text" id="title" name="title" class="form-control" required>
+                        <label for="designation" class="form-label">Job Title:</label>
+                        <input type="text" id="designation" name="designation" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="description" class="form-label">Description:</label>
@@ -83,12 +64,29 @@
                     <div class="mb-3">
                         <label for="compid" class="form-label">Company ID:</label>
                         <input type="number" id="compid" name="compid" class="form-control" required>
+                        <div class="invalid-feedback">Company ID does not exist. Please register the company first.
+                        </div>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Submit</button>
                 </form>
             </div>
         </section>
     </div>
+
+    <script>
+        document.getElementById('jobForm').addEventListener('submit', function (e) {
+            const compid = document.getElementById('compid').value;
+            if (!compidExists(compid)) { // Simulate server-side validation
+                e.preventDefault();
+                document.getElementById('compid').classList.add('is-invalid');
+            }
+        });
+
+        function compidExists(compid) {
+            // Simulate a check for company ID existence (replace with actual server-side validation)
+            return compid !== '0'; // Example: Assume '0' is an invalid company ID
+        }
+    </script>
 </body>
 
 </html>
