--- a/main/recruiter-register.html
+++ b/main/recruiter-register.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/css/dashboard.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <title>Register Company</title>
 </head>
 
@@ -37,31 +40,32 @@
         </ul>
       </div>
     </nav>
+
     <section class="main">
       <div class="main-top">
         <p>Explore the opportunities</p>
       </div>
       <br />
-      <h3 style="text-align: center;">Enter Company Details</h3>
+      <h3 class="text-center">Enter Company Details</h3>
       <div class="updation">
-        <form action="/php/companyRegistration.php" method="post">
+        <form method="POST" action="../php/companyRegistration.php" class="p-4 border rounded bg-light">
           <div class="mb-3">
-            <label for="Company" class="form-label">Company ID</label>
-            <input type="text" class="form-control" id="Company" name="comp_id" placeholder="">
+            <label for="compid" class="form-label">Company ID:</label>
+            <input type="text" id="compid" name="compid" class="form-control" required>
           </div>
           <div class="mb-3">
-            <label for="Company" class="form-label">Company Name</label>
-            <input type="text" class="form-control" id="Company" name="comp_name" placeholder="">
+            <label for="compname" class="form-label">Company Name:</label>
+            <input type="text" id="compname" name="compname" class="form-control" required>
           </div>
           <div class="mb-3">
-            <label for="numbercompany" class="form-label">Contact Number</label>
-            <input type="text" class="form-control" id="numbercompany" name="cont_num" placeholder="888-444-5874">
+            <label for="contact" class="form-label">Contact Number:</label>
+            <input type="text" id="contact" name="contact" class="form-control" required>
           </div>
           <div class="mb-3">
-            <label for="location" class="form-label">Location</label>
-            <input type="text" class="form-control" id="location" name="location" placeholder="Bangalore,Pune etc">
+            <label for="location" class="form-label">Location:</label>
+            <input type="text" id="location" name="location" class="form-control" required>
           </div>
-          <button class="btn btn-success">Register</button>
+          <button type="submit" class="btn btn-success w-100">Register</button>
         </form>
       </div>
     </section>
