--- a/main/login.html
+++ b/main/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/loginpage.css" />
-    <title>Login/Sign Up</title>
+    <title>JobPortal - Login/Sign Up</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
@@ -17,17 +17,81 @@
   <body>
     <div id="container" class="container">
       <div class="row">
-        <div class="col align-items-center flex-col sign-up">
-          <form action="/php/register.php" method="post">
-            <div class="form-wrapper align-items-center">
-              <div class="form sign-up">
+        <!-- Background Content -->
+        <div class="content-row">
+          <div class="col sign-in">
+            <div class="text">
+              <h2>Welcome Back!</h2>
+              <p>Sign in to access your account and continue your job search journey with thousands of opportunities waiting for you.</p>
+              <div class="img">
+                <img src="/img/profile.png" alt="Sign In" />
+              </div>
+            </div>
+          </div>
+          <div class="col sign-up">
+            <div class="text">
+              <h2>Join Our Community!</h2>
+              <p>Create your account and start exploring amazing job opportunities from top companies worldwide.</p>
+              <div class="img">
+                <img src="/img/logo.jpg" alt="Sign Up" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Sign In Form -->
+        <div class="col sign-in">
+          <form action="/php/login.php" method="post">
+            <div class="form-wrapper">
+              <div class="form sign-in">
+                <div class="form-header">
+                  <h2>Welcome Back</h2>
+                  <p>Sign in to your account to continue</p>
+                </div>
                 <div class="input-group">
                   <i class="fas fa-user"></i>
-                  <input type="text" placeholder="Username" name="username" required />
+                  <input type="text" placeholder="Username or Email" name="username" required />
+                </div>
+                <div class="input-group">
+                  <i class="fas fa-lock"></i>
+                  <input type="password" placeholder="Password" name="password" required />
+                </div>
+                <div class="radio-group">
+                  <label>
+                    <input type="radio" name="user_type" value="A" required />
+                    <span>Recruiter</span>
+                  </label>
+                  <label>
+                    <input type="radio" name="user_type" value="B" required />
+                    <span>Job Seeker</span>
+                  </label>
+                </div>
+                <button type="submit">Sign In</button>
+              </div>
+            </div>
+          </form>
+          <p>
+            <span>Don't have an account?</span>
+            <b onclick="toggle()" class="pointer">Sign up here</b>
+          </p>
+        </div>
+
+        <!-- Sign Up Form -->
+        <div class="col sign-up">
+          <form action="/php/register.php" method="post">
+            <div class="form-wrapper">
+              <div class="form sign-up">
+                <div class="form-header">
+                  <h2>Create Account</h2>
+                  <p>Join thousands of job seekers and recruiters</p>
+                </div>
+                <div class="input-group">
+                  <i class="fas fa-user"></i>
+                  <input type="text" placeholder="Full Name" name="username" required />
                 </div>
                 <div class="input-group">
                   <i class="fas fa-envelope"></i>
-                  <input type="email" placeholder="Email" name="email" required />
+                  <input type="email" placeholder="Email Address" name="email" required />
                 </div>
                 <div class="input-group">
                   <i class="fas fa-lock"></i>
@@ -35,59 +99,26 @@
                 </div>
                 <div class="input-group">
                   <i class="fas fa-lock"></i>
-                  <input type="password" placeholder="Confirm password" name="confirm_password" required />
+                  <input type="password" placeholder="Confirm Password" name="confirm_password" required />
                 </div>
-                <div class="input-group">
+                <div class="radio-group">
                   <label>
                     <input type="radio" name="user_type" value="A" required />
-                    Recruiter
+                    <span>Recruiter</span>
                   </label>
                   <label>
                     <input type="radio" name="user_type" value="B" required />
-                    Jobseeker
+                    <span>Job Seeker</span>
                   </label>
                 </div>
-                <button type="submit">Sign up</button>
+                <button type="submit">Create Account</button>
               </div>
             </div>
           </form>
           <p>
-            <span> Already have an account? </span>
-            <b onclick="toggle()" class="pointer"> Sign in here </b>
+            <span>Already have an account?</span>
+            <b onclick="toggle()" class="pointer">Sign in here</b>
           </p>
-        </div>
-        <div class="col align-items-center flex-col sign-in">
-          <form action="/php/login.php" method="post">
-            <div class="form-wrapper align-items-center">
-              <div class="form sign-in">
-                <div class="input-group">
-                  <i class="fas fa-user"></i>
-                  <input type="text" placeholder="Username" name="username" required />
-                </div>
-                <div class="input-group">
-                  <i class="fas fa-lock"></i>
-                  <input type="password" placeholder="Password" name="password" required />
-                </div>
-                <div class="input-group">
-                  <label>
-                    <input type="radio" name="user_type" value="A" required />
-                    Recruiter
-                  </label>
-                  <label>
-                    <input type="radio" name="user_type" value="B" required />
-                    Jobseeker
-                  </label>
-                </div>
-                <button type="submit">Sign in</button>
-              </div>
-            </div>
-          </form>
-          <p>
-            <span> Don't have an account? </span>
-            <b onclick="toggle()" class="pointer"> Sign up here </b>
-          </p>
-       
-         
         </div>
       </div>
     </div>
